--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.board-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background: blanchedalmond;
+  width: fit-content;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tile-wrapper {
+  border: 1px solid black;
+  width: 64px;
+  height: 64px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tile-wrapper div{
+  font-family: monospace;
+  font-size: 32px;
+  font-weight: bold;
 }
